refactoring notebooks to use sound directory

--- a/week1/Python and sounds.ipynb
+++ b/week1/Python and sounds.ipynb
@@ -2,25 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.io import wavfile\n",
     "from matplotlib import pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "AUDIO_FILE = Path(\"../sounds/Melody1 150bpm.wav\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<audio controls=true src='Melody1 150bpm.wav'>"
+    "<audio controls=true src=\"../sounds/Melody1 150bpm.wav\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -28,8 +32,7 @@
      "output_type": "stream",
      "text": [
       "48000 Hz, duration 12.80 seconds\n",
-      "(614400, 2)\n",
-      "1228800\n"
+      "(614400, 2)\n"
      ]
     },
     {
@@ -45,7 +48,7 @@
    ],
    "source": [
     "# Reading a wav file\n",
-    "fs, x = wavfile.read('Melody1 150bpm.wav')\n",
+    "fs, x = wavfile.read(AUDIO_FILE)\n",
     "print(f'{fs} Hz, duration {len(x)/fs:.2f} seconds')\n",
     "\n",
     "# this numpy arry has a shape of (N, 2) because it's a stereo file\n",
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +109,13 @@
     "\n",
     "plt.plot(tail)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<audio controls=true src=\"./tail.wav\">"
    ]
   },
   {
